@startuml auth_rbac
title Authentication and Access Control (RBAC)

left to right direction

skinparam shadowing false
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classHeaderBackgroundColor #D6E4F0
skinparam packageBackgroundColor #EAF2FF
skinparam packageBorderColor #1F4E79
skinparam packageFontColor #1F4E79
skinparam defaultFontName Helvetica
skinparam defaultFontSize 12
skinparam ArrowColor #444444
skinparam ArrowThickness 1.5
skinparam noteBorderColor #999999
skinparam noteBackgroundColor #FFFDE7
hide circle

package "Security" {

  class User {
    - email : String
    - passwordHash : String
    - active : boolean
    - firstLogin : boolean
    - tokenVersion : int
    --
    + authenticate() : AccessToken
    + changePassword() : void
  }

  class Role {
    - name : String
    --
    + hasPermission(code : String) : boolean
  }

  class Permission {
    - code : String
    - module : String
  }

  class AccessToken {
    - version : int
    - expiresAt : Date
    --
    + isValid() : boolean
  }

}

User "1" --> "1" Role       : has >
Role "1" --> "*" Permission : grants >
User  .>       AccessToken  : generates >

note bottom of Role
  Predefined roles: ADMIN, DIRECTEUR, CHEF_PROJET, DEVELOPPEUR.
end note

note right of Permission
  Example: code = ASSIGN_DEVELOPER, module = PROJET.
end note

note bottom of AccessToken
  Not a persisted entity — represents the JWT claims; revocation uses User.tokenVersion.
end note

@enduml
